Drop NextJS, port over to Astro

--- a/package.json
+++ b/package.json
@@ -1,32 +1,24 @@
 {
   "name": "yeniceri.dev",
-  "version": "0.1.0",
-  "private": true,
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@icons-pack/react-simple-icons": "^12.0.0",
-    "@tailwindcss/postcss": "^4.0.9",
+    "@lucide/astro": "^0.544.0",
+    "@tailwindcss/vite": "^4.1.13",
+    "astro": "^5.13.7",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.476.0",
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2"
+    "simple-icons-astro": "^15.14.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.9",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
